cambios en index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
        <!-- Encabeczado -->
         <h1>Titulo de mi web</h1>
-        
+        <!-- Comentario test-->
         <!-- Menu -->
         <ul>
             <li><a href="index.html" title="Inicio">Inicio</a></li>
